# gnome-kiosk

./: .gitignore  .gitlab-ci.yml  CONFIG.md  NEWS  README.md  config.h.meson  gnome-kiosk.doap  meson.build  meson_options.txt  window-config.ini
.gitlab-ci/: checkout-mutter.sh  install-common-dependencies.sh
.gitlab/issue_templates/: Bug.md  Feature.md
accessibility-panel/: README.md  accessibility-panel.py.in  meson.build  org.gnome.Kiosk.AccessibilityPanel.desktop.in
ansible-test-harness/: ansible-test-harness.sh.in  tests.yml
ansible-test-harness/kiosk-testing-role/defaults/: main.yml
ansible-test-harness/kiosk-testing-role/tasks/: main.yml
atm-demo/: main-menu.html  org.gnome.Kiosk.ATMDemo.Session.desktop.in  org.gnome.Kiosk.ATMDemo.desktop.in.in  org.gnome.Kiosk.ATMDemo.session.desktop.in.in  pin.html  thank-you.html  welcome.html
compositor/: kiosk-app-system.c  kiosk-app-system.h  kiosk-app.c  kiosk-app.h  kiosk-area-constraint.c  kiosk-area-constraint.h  kiosk-automount-manager.c  kiosk-automount-manager.h  kiosk-backgrounds.c  kiosk-backgrounds.h  kiosk-compositor.c  kiosk-compositor.h  kiosk-dbus-utils.c  kiosk-dbus-utils.h  kiosk-gobject-utils.c  kiosk-gobject-utils.h  kiosk-input-engine-manager.c  kiosk-input-engine-manager.h  kiosk-input-source-group.c  kiosk-input-source-group.h  kiosk-input-sources-manager.c  kiosk-input-sources-manager.h  kiosk-magnifier.c  kiosk-magnifier.h  kiosk-monitor-constraint.c  kiosk-monitor-constraint.h  kiosk-screenshot.c  kiosk-screenshot.h  kiosk-service.c  kiosk-service.h  kiosk-shell-introspect-service.c  kiosk-shell-introspect-service.h  kiosk-shell-screenshot-service.c  kiosk-shell-screenshot-service.h  kiosk-shell-service.c  kiosk-shell-service.h  kiosk-window-config.c  kiosk-window-config.h  kiosk-window-tracker.c  kiosk-window-tracker.h  (+4 more)
compositor/data/: org.gnome.Kiosk.desktop.in.in
compositor/data/dconf/: gnome-kiosk.in  gnomekiosk.in
compositor/data/dconf/defaults/: gnome-kiosk.dconf
compositor/data/systemd/: org.gnome.Kiosk.target  org.gnome.Kiosk.target.in  org.gnome.Kiosk@wayland.service.in  org.gnome.Kiosk@x11.service.in
dbus-interfaces/: org.gnome.DisplayManager.Manager.xml  org.gnome.Kiosk.xml  org.gnome.SessionManager.xml  org.gnome.Shell.xml
input-selector/: kiosk-input-selector-application.c  kiosk-input-selector-application.h  kiosk-input-selector-application.ui  kiosk-input-selector.gresource.xml  main.c  meson.build
kiosk-script/: gnome-kiosk-script  meson.build
kiosk-script/desktop/: org.gnome.Kiosk.Script.desktop.in.in
kiosk-script/gnome-session/: gnome-kiosk-script.session
kiosk-script/systemd/: org.gnome.Kiosk.Script.service.in  session.conf
kiosk-script/wayland-sessions/: gnome-kiosk-script-wayland.desktop.in
kiosk-script/xsessions/: gnome-kiosk-script-xorg.desktop.in
meson/: postinstall.py
notification-daemon/: gnome-kiosk-notification-daemon.service.in  gnome-kiosk-notification-send.py.in  meson.build  notification-daemon.css  notification-daemon.py.in  org.freedesktop.Notifications.service.in  org.gtk.Notifications.service.in
po/: POTFILES.in
scripts/: check-format.sh  generate-dbus-proxy-interface.sh  uncrustify.cfg
search-app/: meson.build  org.gnome.Kiosk.SearchApp.Session.desktop.in  org.gnome.Kiosk.SearchApp.desktop.in.in  org.gnome.Kiosk.SearchApp.session.desktop.in  org.gnome.Kiosk.SearchApp.session.desktop.in.in
search-app/systemd/: org.gnome.Kiosk.SearchApp.service.in  session.conf
search-app/wayland-sessions/: meson.build  org.gnome.Kiosk.SearchApp.Session.desktop.in
search-app/xsessions/: meson.build  org.gnome.Kiosk.SearchApp.Session.X11.desktop.in
train-demo/: gnome-kiosk-train-demo  org.gnome.Kiosk.TrainDemo.Session.desktop.in  org.gnome.Kiosk.TrainDemo.desktop.in.in  org.gnome.Kiosk.TrainDemo.session.desktop.in.in  train-demo.html
