option('input-selector',
  type: 'boolean',
  value: false,
  description: 'Build input selector'
)

option('kiosk-script',
  type: 'boolean',
  value: false,
  description: 'Build kiosk script example'
)

option('search-app',
  type: 'boolean',
  value: false,
  description: 'Build kiosk search app example'
)
